kubernasty/manifests/crust/lldap/ingresses/lldap.https.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap
  namespace: lldap
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-clusteradmin-auth-mw@kubernetescrd

spec:
  rules:
  - host: lldap.${clusterTld}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lldap
            port:
              number: 80
  tls:
    - secretName: micahrl-dot-me-wildcard-backing-secret
      hosts:
        - lldap.${clusterTld}
